--- a/configs/musicxlstm.yaml
+++ b/configs/musicxlstm.yaml
@@ -14,6 +14,7 @@ training:
   save_every_step: 100
   log_every_step: 10
   wandb_project: "musicxlstm"
+  torch_compile: false
 
 model:
   num_blocks: 2
