--- a/configs/bach_garland_transformer.yaml
+++ b/configs/bach_garland_transformer.yaml
@@ -1,6 +1,6 @@
 training:
   model_name: "bach_garland_transformer"
-  batch_size: 4
+  batch_size: 40
   lr: 0.001
   lr_warmup_steps: "10%"
   lr_decay_until_steps: "auto"
@@ -9,7 +9,7 @@ training:
   amp_precision: bfloat16
   weight_precision: float32
   enable_mixed_precision: true
-  num_epochs: 4
+  num_epochs: 8
   output_dir: "output/bach_garland_transformer"
   save_every_step: 500
   log_every_step: 10
@@ -18,7 +18,11 @@ training:
 
 model:
   type: "transformer"
-
+  dim: 64
+  n_layers: 4
+  n_heads: 4
+  fc_scale: 2
+  context_length: 2048
 
 dataset:
   hugging_face_id: "TristanBehrens/bach_garland_2024-100K"
