--- a/requirements-mac.txt
+++ b/requirements-mac.txt
@@ -13,6 +13,8 @@ mambapy==1.2.0
 einops==0.8.0
 #mamba-ssm==2.2.2
 fairscale==0.4.13
+onnx==1.15.0
+onnxruntime==1.18.0
 
 # Requirements you need when not installing xLSTM.
 omegaconf==2.3.0
