--- a/configs/jsfakes_garland_aethon.yaml
+++ b/configs/jsfakes_garland_aethon.yaml
@@ -1,6 +1,6 @@
 training:
   model_name: "jsfakes_garland_aethon"
-  batch_size: 16
+  batch_size: 48
   lr: 0.001
   lr_warmup_steps: "10%"
   lr_decay_until_steps: "auto"
@@ -9,12 +9,13 @@ training:
   amp_precision: bfloat16
   weight_precision: float32
   enable_mixed_precision: true
-  num_epochs: 1
+  num_epochs: 10
   output_dir: "output/jsfakes_garland_aethon"
   save_every_step: 500
   log_every_step: 10
   wandb_project: "jsfakes_garland"
   torch_compile: false
+  comment: ""
 
 model:
   type: "aethon"
