--- a/configs/jsfakes_garland_omnius.yaml
+++ b/configs/jsfakes_garland_omnius.yaml
@@ -1,5 +1,5 @@
 training:
-  model_name: "drums2024_llamathree"
+  model_name: "jsfakes_garland_omnius"
   batch_size: 48
   lr: 0.001
   lr_warmup_steps: "10%"
@@ -9,16 +9,16 @@ training:
   amp_precision: bfloat16
   weight_precision: float32
   enable_mixed_precision: true
-  num_epochs: 5
-  output_dir: "output/drums2024_llamathree"
+  num_epochs: 10
+  output_dir: "output/jsfakes_garland_omnius"
   save_every_step: 500
   log_every_step: 10
-  wandb_project: "drums2024"
+  wandb_project: "jsfakes_garland"
   torch_compile: false
 
 model:
-  type: "llamathree"
-  context_length: 512
+  type: "omnius"
+  context_length: 2048
   emb_dim: 64
   n_heads: 4
   n_layers: 4
@@ -30,7 +30,7 @@ model:
   dtype: float32
 
 dataset:
-  hugging_face_id: "TristanBehrens/drums2024-1M"
+  hugging_face_id: "TristanBehrens/jsfakes_garland_2024-100K"
   
 tokenizer:
   type: "whitespace"
