--- a/configs/xmidi_tonnetz_llamathree.yaml
+++ b/configs/xmidi_tonnetz_llamathree.yaml
@@ -1,6 +1,6 @@
 training:
-  model_name: "drums2024_llamathree"
-  batch_size: 48
+  model_name: "xmidi-tonnetz"
+  batch_size: 32
   lr: 0.001
   lr_warmup_steps: "10%"
   lr_decay_until_steps: "auto"
@@ -10,15 +10,15 @@ training:
   weight_precision: float32
   enable_mixed_precision: true
   num_epochs: 5
-  output_dir: "output/drums2024_llamathree"
+  output_dir: "output/xmidi-tonnetz"
   save_every_step: 500
   log_every_step: 10
-  wandb_project: "drums2024"
+  wandb_project: "tonnetz"
   torch_compile: false
 
 model:
   type: "llamathree"
-  context_length: 512
+  context_length: 2048
   emb_dim: 64
   n_heads: 4
   n_layers: 4
@@ -30,7 +30,7 @@ model:
   dtype: float32
 
 dataset:
-  hugging_face_id: "TristanBehrens/drums2024-1M"
+  hugging_face_id: "TristanBehrens/xmidi-tonnetz"
   
 tokenizer:
   type: "whitespace"
